--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
 tensorflow
-numpy
-pandas
 nltk
 scikit-learn
-gensim
+gensim==4.3.1
+scipy==1.10.1
+numpy==1.23.5
+pandas==1.5.3
+streamlit==1.18.1
