--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ streamlit
 pandas>=2.0.3
 numpy>=1.24.3
 matplotlib>=3.7.2
-tensorflow==2.13.0  # إصدار متوافق مع Gensim
+tensorflow==2.19.0  # استخدام إصدار متوافق مع Python 3.12
 nltk
 gensim==4.3.2
 scipy>=1.11.4
