--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Pillow
-streamlit
-pandas>=2.0.3
-numpy>=1.24.3
-matplotlib>=3.7.2
-tensorflow==2.19.0
-nltk
+Pillow==10.3.0
+streamlit==1.43.0
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.8.4
+tensorflow==2.16.1
+nltk==3.8.1
 gensim==4.3.2
-scipy==1.13.0  # إصدار محدّث ومتوافق
+scipy==1.11.4  # التحديد الصارم للإصدار
