--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-streamlit==1.20.0
+pillow
+streamlit
+pandas>=2.0.3
 tensorflow==2.10.0
-numpy==1.23.5
+numpy>=1.24.3
 nltk
 gensim
-scipy<=1.10.1
+matplotlib>=3.7.2
+scipy
+joblib
